--- a/src/Styles/rightDiv.module.css
+++ b/src/Styles/rightDiv.module.css
@@ -1,4 +1,8 @@
 .rightDiv {
   border: 1px solid black;
-  width: 600px;
+  width: 60%;
+  margin-right: 20px;
+  padding-left: 30px;
+  padding-top: 30px;
+  font-family: Arial, Helvetica, sans-serif;
 }
