--- a/src/Styles/leftDiv.module.css
+++ b/src/Styles/leftDiv.module.css
@@ -5,7 +5,7 @@
     flex-direction: column;
     align-items: center;
     font-family: Arial, Helvetica, sans-serif;
-    border: 1px solid black;
+    /* border: 1px solid black; */
 }
 .leftDiv > h2{
     margin-bottom: 30px;
