--- a/src/Styles/rightDiv.module.css
+++ b/src/Styles/rightDiv.module.css
@@ -1,8 +1,9 @@
 .rightDiv {
-  border: 1px solid black;
+  /* border: 1px solid black; */
   width: 60%;
   margin-right: 20px;
   padding-left: 30px;
+  padding-right: 30px;
   padding-top: 30px;
   font-family: Arial, Helvetica, sans-serif;
 }
