add placeholder to searchbar and styke the header

--- a/src/Styles/Nav.module.css
+++ b/src/Styles/Nav.module.css
@@ -2,7 +2,8 @@
   font-size: 2em;
   font-family: Arial, Helvetica, sans-serif;
   font-weight: bold;
-  color: rgb(24, 78, 36);
+  color: rgb(58, 107, 47);
   padding: 30px;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+  background-color: rgb(205, 224, 185);
 }
