--- a/src/Styles/Search.module.css
+++ b/src/Styles/Search.module.css
@@ -11,9 +11,11 @@
 .inputBar{
     
     width: 400px;
-    height: 30px;
+    height: 40px;
     font-size: 1.2rem;
-    border: 1px solid rgb(237, 231, 231);
+    border: 1px solid rgb(216, 214, 214);
     box-shadow: 0px 0px 30px rgba(0, 0, 0, 0.1);
     padding: 5px;
+    border-radius: 8px;
+    padding-left: 10px;
 }
